<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F9"
    tools:context=".YourCategoryPage3"
    tools:layout_editor_absoluteX="-5dp"
    tools:layout_editor_absoluteY="-67dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <Spinner
            android:id="@+id/categoryRunEditTextPage3"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="13dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/users_alt"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:layout_marginTop="10sp"
        app:cardCornerRadius="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <EditText
            android:id="@+id/resultEditTextPage3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="13dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/result"
            android:inputType="textPersonName"
            android:textColorHint="@color/grayBackgroundText" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/stopwatch_img"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/running_track"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editTextDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="70dp"
            android:background="@android:color/transparent"
            android:hint="@string/distance"
            android:inputType="textPersonName"
            android:textColorHint="@color/grayBackgroundText" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:elevation="14dp"
        app:cardCornerRadius="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/logo4"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/signOutButton3"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginStart="-270dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/sign_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:elevation="0dp"
        app:cardCornerRadius="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:background="@color/white">


            <ImageButton
                android:id="@+id/goToThirdActivity"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="90dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/go_to_third_activity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/goToFirstActivity"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton

                android:id="@+id/goToFourthActivity"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="90dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/go_to_fourth_activity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/goToFirstActivity"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/goToFirstActivity"

                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/go_to_first_activity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/goToSecondActivity"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/getYourCategory"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardV" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardV"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardCornerRadius="17dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6"
        tools:cardCornerRadius="17dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="190dp"
                android:text="@string/category"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/findResultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:text="@string/findCategory"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/layoutimg_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
